# bracket-state-machine

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: basic.rs
src/: lib.rs  state.rs  state_machine.rs
