[package]
authors     = ["Jacob LeCoq <lecoqjacob@gmail.com>"]
categories  = ["game-engines"]
description = "State management library for bracket-lib terminal"
edition     = "2021"
homepage    = "https://github.com/lecoqjacob/bracket-state-machine"
keywords    = ["gamedev", "bracket-lib"]
license     = "MIT"
name        = "bracket-state-machine"
publish     = true
version     = "0.1.0"

[features]
default = ["opengl"]

cross_term = ["bracket-terminal/cross_term"]
curses     = ["bracket-terminal/curses"]
low_cpu    = ["bracket-terminal/low_cpu"]
opengl     = ["bracket-terminal/opengl"]
webgpu     = ["bracket-terminal/webgpu"]

[dependencies]
bracket-terminal = { git = "https://github.com/amethyst/bracket-lib" }
