[package]
authors     = ["Jacob LeCoq <lecoqjacob@gmail.com>"]
categories  = ["game-engines"]
description = "State management library for bracket-lib terminal"
edition     = "2021"
homepage    = "https://github.com/lecoqjacob/bracket-state-machine"
keywords    = ["gamedev", "bracket-lib"]
license     = "MIT"
name        = "bracket-state-machine"
publish     = true
version     = "0.1.0"

[features]
crossterm = ["bracket-lib/crossterm"]
curses    = ["bracket-lib/curses"]
opengl    = ["bracket-lib/opengl"]
serde     = ["bracket-lib/serde"]
threaded  = ["bracket-lib/threaded"]
webgpu    = ["bracket-lib/webgpu"]

[dependencies]
bracket-lib = { git = "https://github.com/amethyst/bracket-lib" }
